<resources>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_name">士继达</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scanner_heaed">扫描器</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">应用</string>
    <string name="button_share_bookmark">书签</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">剪贴板</string>
    <string name="button_share_contact">联系</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">清除历史</string>
    <string name="history_clear_one_history_text">清除</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">发送历史记录</string>
    <string name="history_title">历史扫图</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量模式：条形码扫描并保存</string>
    <string name="msg_camera_framework_bug">对不起，安卓相机遇到了问题。您可能需要重新启动设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码或二维码放在视窗内</string>
    <string name="msg_default_time">日期</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">你可以通过在屏幕上显示一个条形码，并用另一个设备扫描它来分享数据。</string>
    <string name="msg_share_text">或者输入信息并按回车键</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="title">车辆管理</string>
    <string name="title1">新能源</string>
    <string name="title_R">物流车运营平台</string>
    <string name="logo">专业做人   专业做事</string>
    <string name="carInfo">车辆信息</string>
    <string name="statistics">里程统计</string>
    <string name="battery">电量展示</string>
    <string name="location">车辆定位</string>
    <string name="grzx">个人中心</string>
    <string name="clgl">车辆管理</string>
    <string name="tztx">通知提醒</string>
    <string name="fwcx">服务查询</string>
    <string name="desc">新能源</string>
    <string name="consult_back">咨询服务返回</string>
    <string name="clxxxq">车辆信息详情</string>
    <string name="cph">车牌号</string>
    <string name="yu_a">渝A 12345</string>
    <string name="cllx">车辆类型</string>
    <string name="hc">货车</string>
    <string name="fdj">发动机</string>
    <string name="hqddfdj">很强大的发动机</string>
    <string name="scs">生产商</string>
    <string name="hxqcgc">花溪汽车工厂</string>
    <string name="jsr">驾驶人</string>
    <string name="zq">张琪</string>
    <string name="fzr">负责人</string>
    <string name="lwy">李维一</string>
    <string name="zxfw">咨询服务</string>
    <string name="yyfw">预约服务</string>
    <string name="clwh">车辆维护</string>
    <string name="cdzcx">充电桩查询</string>
    <string name="words1">为你所想 为你所乐</string>
    <string name="words2">为我人生 创造辉煌</string>
    <string name="message_icon">消息</string>
    <string name="red_point">新消息</string>
    <string name="consult_ask">提问</string>
    <string name="head_image">头像</string>
    <string name="username">用户姓名</string>
    <string name="consult_title">咨询题目</string>
    <string name="btt">置顶</string>
    <string name="cream">精</string>
    <string name="hot">热</string>
    <string name="consult_service_content">这第三轮卡萨诺放假啊导师非礼件大事覅哈萨克打斯诺克服了三分的说法几十个发顺丰噶搜个回答搜if贺拉斯进口国佛爱国</string>
    <string name="time">时间</string>
    <string name="support">点赞</string>
    <string name="support_number">1</string>
    <string name="against">点踩</string>
    <string name="talk">评论</string>
    <string name="what">imageview</string>
    <string name="change_password_input1"><font size="15">请输入账户原密码</font></string>
    <string name="change_password_input2"><font size="15">请输入账户新密码</font></string>
    <string name="change_password_input3"><font size="15">请再次输入账户新密码</font></string>
    <string name="shade">遮罩</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_cancel">取消</string>
    <string name="change_password_sure">确认</string>
    <string name="login_bg">登录背景</string>
    <string name="login_userId">电话号码(账号)</string>
    <string name="login_password">请输入密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_button">登录</string>
    <string name="login_signup">还没账号？注册一个</string>
    <string name="person_name">听雨不孤独</string>
    <string name="person_username">用户名</string>
    <string name="person_userId">帐号</string>
    <string name="person_telephone">11111111111</string>
    <string name="person_company">公司</string>
    <string name="software_lab">软件工程创新实验室</string>
    <string name="log_off">退出当前账号</string>
    <string name="message">消息</string>
    <string name="message_username">向来缘浅，奈何情深</string>
    <string name="reply">回复</string>
    <string name="message_time">时间</string>
    <string name="message_reply_content">谢谢您的回答</string>
    <string name="colon">:</string>
    <string name="more_reply_landlord_content2">xxxxxxxxxxxxxxxxx</string>
    <string name="landlord">楼主</string>
</resources>