<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/encode_view"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:id="@+id/person_changepassword_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ChangePassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/change_password"
            android:textColor="#02c3ad"
            android:textSize="20sp" />

        <com.example.util.EditTextSub.SubEditText
            android:id="@+id/change_firstinput"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#66ffffff"
            android:drawablePadding="7dp"
            android:hint="@string/change_password_input1"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="#bebebe"
            android:textSize="17sp" >

            <requestFocus />
        </com.example.util.EditTextSub.SubEditText>

        <TextView
            android:id="@+id/firstinput_divider"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#cacaca" />

        <com.example.util.EditTextSub.SubEditText
            android:id="@+id/change_secondinput"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/change_password_input2"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="#bebebe" />

        <TextView
            android:id="@+id/secondinput_divider"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#cacaca" />

        <com.example.util.EditTextSub.SubEditText
            android:id="@+id/change_thirdinput"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/change_password_input3"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="#bebebe" />

        <TextView
            android:id="@+id/thirdinput_divider"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#cacaca" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <RelativeLayout
                android:id="@+id/change_password_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/change_password_cancel"
                    android:textColor="#bebebe"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/change_password_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/change_password_sure"
                    android:textColor="#02c3ad"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>